test/e2e/fixtures/mapping-invalid-port/queries.json
[
  {
    "url": "/ambassador/v0/diag/?json=true&filter=errors",
    "method": "GET"
  }
]
